--- a/src/app/heroes/components/heart/heart.component.css
+++ b/src/app/heroes/components/heart/heart.component.css
@@ -37,7 +37,7 @@
 @media screen and (max-width: 768px) {
   .heart-red,
   .heart-red:before,
-  .heart-red:after {
+  .heart-red:after:hover {
     background-color: white;
   }
 }
